bk_ida/gccida/c3/block_alloc
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/local-alloc.c:1736:74: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( insn = *( rtx *)( basic_block_info->data.l[b] + 8); ; insn = ( rtx)insn[1] ) 
                                                                         ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/local-alloc.c:1756:1: error: use of undeclared identifier 'this_insn_0'; did you mean 'this_insn'?
this_insn_0 = insna; 
^~~~~~~~~~~
this_insn
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/local-alloc.c:243:12: note: 'this_insn' declared here
static rtx this_insn;
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/local-alloc.c:1760:4: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& recog_data_0.n_operands > 1 
   ^~~~~~~~~~~~
   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/local-alloc.c:1761:5: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& *recog_data_0.constraints[0] == 61 
    ^~~~~~~~~~~~
    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/local-alloc.c:1762:17: error: use of undeclared identifier 'recog_data_0'
&& *( ( _BYTE *)recog_data_0.constraints[0] + 1) != 38 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/local-alloc.c:1766:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( i_0 = 1; i_0 < recog_data_0.n_operands; ++i_0 ) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/local-alloc.c:1768:30: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
this_match = requires_inout( recog_data_0.constraints[i_0]); 
                             ^~~~~~~~~~~~
                             recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/local-alloc.c:1770:20: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( this_match == recog_data_0.n_alternatives ) 
                   ^~~~~~~~~~~~
                   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/local-alloc.c:1773:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
r0 = recog_data_0.operand[0]; 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/local-alloc.c:1774:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( i_0a = 1; i_0a < recog_data_0.n_operands; ++i_0a ) 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/local-alloc.c:1778:33: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| i_0a == must_match_0 + 1 && *recog_data_0.constraints[i_0a - 1] == 37 
                                ^~~~~~~~~~~~
                                recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/local-alloc.c:1779:33: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| i_0a == must_match_0 - 1 && *recog_data_0.constraints[i_0a] == 37) 
                                ^~~~~~~~~~~~
                                recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/local-alloc.c:1780:25: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& ( n_matching_alts != recog_data_0.n_alternatives || requires_inout( recog_data_0.constraints[i_0a])) ) 
                        ^~~~~~~~~~~~
                        recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/local-alloc.c:1780:72: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& ( n_matching_alts != recog_data_0.n_alternatives || requires_inout( recog_data_0.constraints[i_0a])) ) 
                                                                       ^~~~~~~~~~~~
                                                                       recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/local-alloc.c:1782:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
r1 = recog_data_0.operand[i_0a]; 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/local-alloc.c:1783:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( *recog_data_0.constraints[i_0a] == 112 ) 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/local-alloc.c:1804:12: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( r1 == recog_data_0.operand[i_0a] ) 
           ^~~~~~~~~~~~
           recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/local-alloc.c:1840:51: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( v4->fld[0].rtx == r0a && (  struct rtx_def *)v4[1] == r0a ) 
                                                  ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/local-alloc.c:1893:57: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( linka = insna[3].fld[0].rtx; linka; linka = ( rtx)linka[1] ) 
                                                        ^~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/block_alloc/src/obj/local-alloc.o] Error 1
